# juviz-app

./: LICENSE  setup.cfg
.github/workflows/: release.yml
