[metadata]
name = juviz-app
version = 0.1.0
description = Web frontend to ParaView
long_description = file: README.rst
author = 'Jonathan Windgassen'
author_email = 'j.windgassen@fz-juelich.de'
license = BSD License
classifiers =
    Programming Language :: Python :: 3 :: Only
    Environment :: Web Environment
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Framework :: Jupyter
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    Python
    Interactive
    Web
    Application
    Framework

[options]
packages = find:
include_package_data = True
install_requires =
    pv_visualizer

[semantic_release]
version_pattern = setup.cfg:version = (\d+\.\d+\.\d+)